tests/baselines/reference/iteratorSpreadInCall12.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInCall12.ts(31,36): error TS2345: Argument of type 'string' is not assignable to parameter of type 'symbol'.


==== tests/cases/conformance/es6/spread/iteratorSpreadInCall12.ts (1 errors) ====
    class Foo<T> {
        constructor(...s: T[]) { }
    }
    
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    class StringIterator {
        next() {
            return {
                value: "",
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    new Foo(...[...new SymbolIterator, ...[...new StringIterator]]);
                                       ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'symbol'.